--- a/Assignment4-A/index.html
+++ b/Assignment4-A/index.html
@@ -20,9 +20,9 @@
     <center>
         <div data-role="page">
             <h1 style="color:#6060a3;">
-                Company Website
+                CodSoft
             </h1>
-            <h3>Company Information Table</h3>
+            <h3> Information Table</h3>
             <div data-role="header" id="GFG">
                 <div role="main" class="ui-content">
                     <table data-role="table">
@@ -35,11 +35,11 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Lorem, ipsum.</td>
+                                <td>Larsen, toubro</td>
                                 <td>Computer Science</td>
-                                <td><a href="https://pict.edu/"
+                                <td><a href="https://apcoer.edu/"
                                         data-rel="external">
-                                        https://pict.edu/
+                                        https://apcoer.edu/
                                     </a>
                                 </td>
                             </tr>
